# slurmrestapispawner

./: .gitignore  README.md  pyproject.toml
src/slurmrestapiSpawner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/slurmrestapispawner/: __init__.py  api.py  singleuser.py  spawner.py
tests/integration/: test_cluster_connectivity.py
