[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmrestapispawner"
version = "0.1.0"
description = "JupyterHub Spawner backed by Slurm REST API (slurmrestd)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Emmanuel Kieffer", email = "emmanuel.kieffer@lxp.lu"},
]
dependencies = [
  "jupyterhub>=5.0",
  "jupyterlab>=4.0",
  "traitlets>=5.0",
  "slurmrestapi @ https://github.com/LuxProvide/slurmrestapi.git",
]

[project.urls]
Homepage = "https://github.com/LuxProvide/slurmrestapispawner"

[project.scripts]
slurmrestapi-singleuser = "slurmrestapispawner.singleuser:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
